syntax = "proto3";

package promocodes;

import "common/types.proto";
import "users/service.proto";

import "google/protobuf/timestamp.proto";
option go_package = "./promos"; // для Go

// Promocode/s <=> Promo/s

service Promos {
    rpc Create(CreatePromo) returns (PromoFailure);

    rpc DeleteByName(PromoName) returns (common.Response);
    rpc DeleteById(PromoId) returns (common.Response);
    
    rpc GetById(PromoId) returns (PromoFailure);
    rpc GetByName(PromoName) returns (PromoFailure);

    rpc Use(PromoUserId) returns (users.TransactionResponse);
}

message PromoName {
    string name = 1;
}

message PromoId {
    int64 id = 1;
}

message PromoCode {
    int64 id = 1;
    string name = 2;
    common.Currency currency = 3; 
    int64 amount = 4;
    int32 uses = 5; 
    int64 creator = 6;
    google.protobuf.Timestamp expAt = 7;
    google.protobuf.Timestamp createdAt = 8;
}

message CreatePromo {
    string name = 1;
    int64 amount = 2;
    common.Currency currency = 3;
    int64 creator = 4;
    int32 uses = 5;
    google.protobuf.Timestamp expAt = 6;
}

message PromoFailure{
    optional PromoCode promoCode = 1;
    optional common.Failure failure = 2;
}

message PromoUserId {
    int64 userId = 1;
    int64 promoId = 2;
}